@@ -154,9 +154,9 @@ require_once __DIR__ . '/admin.php';
 \define('_MA_WGEVENTS_REGISTRATION_SALUTATION_MEN', 'Herr');
 \define('_MA_WGEVENTS_REGISTRATION_SALUTATION_WOMEN', 'Frau');
 \define('_MA_WGEVENTS_REGISTRATION_FIRSTNAME', 'Vorname');
-\define('_MA_WGEVENTS_REGISTRATION_FIRSTNAME_PLACEHOLDER', 'Bitte Vorname eingeben');
+\define('_MA_WGEVENTS_REGISTRATION_FIRSTNAME_PLACEHOLDER', 'Bitte Vorname des Teilnehemers/der Teilnehmerin eingeben');
 \define('_MA_WGEVENTS_REGISTRATION_LASTNAME', 'Familienname');
-\define('_MA_WGEVENTS_REGISTRATION_LASTNAME_PLACEHOLDER', 'Bitte Familienname eingeben');
+\define('_MA_WGEVENTS_REGISTRATION_LASTNAME_PLACEHOLDER', 'Bitte Familienname des Teilnehemers/der Teilnehmerin eingeben');
 \define('_MA_WGEVENTS_REGISTRATION_EMAIL', 'E-Mail');
 \define('_MA_WGEVENTS_REGISTRATION_EMAIL_PLACEHOLDER', 'Bitte E-Mail eingeben');
 \define('_MA_WGEVENTS_REGISTRATION_EMAIL_CONFIRM', 'Bestätigung oder Informationen über Änderungen per Mail senden?');
@@ -250,7 +250,7 @@ Eine Teilnahme an der Veranstaltung ohne Zustimmung zu diesen Bestimmungen ist l
 \define('_MA_WGEVENTS_FIELD_TEXTBOX', 'Textfeld');
 \define('_MA_WGEVENTS_FIELD_TEXTAREA', 'Mehrzeiliges Textfeld');
 \define('_MA_WGEVENTS_FIELD_SELECTBOX', 'Dropdownliste');
-\define('_MA_WGEVENTS_FIELD_COMBOBOX', 'Kombinationsfeld');
+\define('_MA_WGEVENTS_FIELD_COMBOBOX', 'Mehrfach-Auswahlliste');
 \define('_MA_WGEVENTS_FIELD_CHECKBOX', 'Kontrollkästchen');
 \define('_MA_WGEVENTS_FIELD_RADIO', 'Optionsfeld');
 \define('_MA_WGEVENTS_FIELD_RADIOYN', 'Optionsfeld Ja/Nein');
